--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 #container
 {
 	margin: 0 30px;
-	background: #fff;
+	background: #7BA05B;
+	border: 2px solid #000;
 }
 
 #header
 {
-	background: #ccc;
+	background: #1FA055;
 	padding: 20px;
+	color: #370028;
+	border: 2px solid #000;
 }
 
 #header h1 { margin: 0; }
@@ -48,6 +51,7 @@
 	clear: left;
 	padding: 20px;
 	margin: 20px;
+	background: #CD853F;
 	-webkit-border-radius: 18px;
 	border-radius: 18px;
 	-webkit-box-shadow: 0px 0px 6px #000000;
@@ -69,10 +73,11 @@
 
 #news
 {	
-	float: left;
+	float: center;
 	width: 40%;
 	padding: 20px;
 	margin: 20px;
+	background: #CD853F;
 	-webkit-border-radius: 18px;
 	border-radius: 18px;
 	-webkit-box-shadow: 0px 0px 6px #000000;
@@ -88,8 +93,8 @@
 #footer
 {
 	clear: both;
-	background: #ccc;
-	text-align: right;
+	background: #fff;
+	text-align: center;
 	padding: 20px;
 	height: 1%;
 }
