--- a/style.css
+++ b/style.css
@@ -8,9 +8,10 @@
 #header
 {
 	background: #1FA055;
-	padding: 20px;
+	padding: 60px;
 	color: #370028;
 	border: 2px solid #000;
+	text-align: center;
 }
 
 #header h1 { margin: 0; }
