--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 #container
 {
 	margin: 0 30px;
-	background: #fff;
+	background: #778899;
 }
 
 #header
 {
-	background: #ccc;
-	padding: 20px;
+	background: #778899;
+	padding: 50px;
+	text-align: center;
 }
 
 #header h1 { margin: 0; }
@@ -50,19 +51,21 @@
 	margin: 20px;
 	-webkit-border-radius: 18px;
 	border-radius: 18px;
-	-webkit-box-shadow: 0px 0px 6px #000000;
-	box-shadow: 0px 0px 6px #000000;
-	background-image: -webkit-gradient(linear, left top, right top, from(#d6e1ff), to(#dbffe7));
-	background-image: -webkit-linear-gradient(left, #d6e1ff, #dbffe7);
-	background-image: linear-gradient(left, #d6e1ff, #dbffe7);
+	-webkit-box-shadow: 6px 6px 6px #87CEFA;
+	box-shadow: 6px 6px 6px #87CEFA;
+	background:#66CDAA;	
+	background-image: -webkit-gradient(linear, left top, right top, from(#48D1CC), to(#87CEFA));
+	background-image: -webkit-linear-gradient(left, #48D1CC, #87CEFA);
+	background-image: linear-gradient(left, #48D1CC, #87CEFA);
 	-webkit-background-clip: padding-box;
 	background-clip: padding-box;
 	opacity: 0.83;
+	text-align: justify;
 }
 
 #edito h2
 {
-	color: #000;
+	color: #000000;
 	font-size: 160%;
 	margin: 0 0 .5em;
 }
@@ -73,22 +76,24 @@
 	width: 40%;
 	padding: 20px;
 	margin: 20px;
-	-webkit-border-radius: 18px;
-	border-radius: 18px;
-	-webkit-box-shadow: 0px 0px 6px #000000;
-	box-shadow: 0px 0px 6px #000000;
+	background:#66CDAA;		
+	-webkit-border-radius: 25px;
+	border-radius: 25px;
+	-webkit-box-shadow: 6px 6px 6px #87CEFA;
+	box-shadow:6px 6px 6px #87CEFA;
 	background-image: -webkit-gradient(linear, left top, right top, from(#d6e1ff), to(#dbffe7));
 	background-image: -webkit-linear-gradient(left, #d6e1ff, #dbffe7);
 	background-image: linear-gradient(left, #d6e1ff, #dbffe7);
 	-webkit-background-clip: padding-box;
 	background-clip: padding-box;
 	opacity: 0.83;
+	text-align: justify;
 }
 
 #footer
 {
 	clear: both;
-	background: #ccc;
+	background: #778899;
 	text-align: right;
 	padding: 20px;
 	height: 1%;
